--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
   },
   "rules": {
     "no-unused-vars": "warn",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "no-unreachable": "warn"
   }
 }
