--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "no-unused-vars": "warn",
     "import/prefer-default-export": "off",
     "no-unreachable": "warn",
-    "arrow-body-style": "off"
+    "arrow-body-style": "off",
+    "react/jsx-boolean-value": "off"
   }
 }
