--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^1.1.1",
     "easy-peasy": "^4.0.1",
     "i18next": "^19.8.9",
+    "normalize-text": "^2.3.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
