implementing subscription order form

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
     "no-unreachable": "warn",
     "arrow-body-style": "off",
     "react/jsx-boolean-value": "off",
-    "react/no-array-index-key": "off"
+    "react/no-array-index-key": "off",
+    "react/prop-types": "warn"
   }
 }
