--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "farmedby",
-  "version": "0.1.0",
+  "version": "1.0.0-beta.1",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.1.5",
