--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "easy-peasy": "^5.0.3",
     "i18next": "^19.8.9",
+    "markdown-to-jsx": "^7.1.3",
     "normalize-text": "^2.3.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
