--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "@material-ui/core": "^5.0.0-alpha.29",
-    "@material-ui/icons": "^5.0.0-alpha.28",
-    "@material-ui/lab": "^5.0.0-alpha.29",
+    "@material-ui/core": "^5.0.0-alpha.34",
+    "@material-ui/icons": "^5.0.0-alpha.34",
+    "@material-ui/lab": "^5.0.0-alpha.34",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dayjs": "^1.10.5",
     "easy-peasy": "^5.0.3",
     "i18next": "^19.8.9",
     "markdown-to-jsx": "^7.1.3",
