--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "prettier.semi": true,
   "prettier.tabWidth": 2,
   "prettier.trailingComma": "none",
-  "prettier.printWidth": 80
+  "prettier.printWidth": 80,
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
