--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.2",
+    "@types/react": "^17.0.25",
+    "@types/react-dom": "^17.0.9",
     "dayjs": "^1.10.5",
     "easy-peasy": "^5.0.3",
     "i18next": "^19.8.9",
@@ -22,7 +26,8 @@
     "react-hook-form": "^6.15.1",
     "react-i18next": "^11.8.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.4.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -50,7 +55,10 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
