--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.25",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.2",
     "dayjs": "^1.10.5",
     "easy-peasy": "^5.0.3",
     "i18next": "^19.8.9",
