--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open --config watchForFileChanges=false"
   },
   "eslintConfig": {
     "extends": [
